--- a/resources/css/includes/my plants.css
+++ b/resources/css/includes/my plants.css
@@ -236,10 +236,10 @@ img {
 
 #buttons {
     position: absolute;
-    width: 230px;
+    width: 250px;
     height: 50px;
     top: 380px;
-    left: 435px;
+    left: 425px;
     display: flex;
     flex-direction: row;
 }
@@ -248,6 +248,26 @@ img {
     position: relative;
     height: 50px;
     margin:auto;
+    border-radius: 15px;
+    -webkit-box-shadow: rgb(0 0 0 / 20%) 0px 3px 16px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 3px 16px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+#waterDrop {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#waterDropMoisture {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#temperatureIcon {
+    padding-left: 17px;
+    padding-right: 18px;
 }
 
 @media screen and (max-width: 699px) {
@@ -279,16 +299,22 @@ img {
 
     #infoAndEditBox {
         width: 396px;
-        height: 450px;
+        height: 600px;
         top:90px;
         left:8px
+    }
+
+    #buttons {
+        left: 77px;
+        top: 460px;
     }
 
     #blurBox {
         height: calc(100% + 87px);
         top: -87px;
         left: -10px;
-        position: fixed;
+        position: sticky;
+        position: -webkit-sticky;
     }
 
     #infoAndEditBox > input, #infoAndEditBox > select {
