--- a/resources/css/includes/sensors.css
+++ b/resources/css/includes/sensors.css
@@ -14,15 +14,16 @@ body {
 
 #blurBox {
     display: none;
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% + 87px);
     z-index: 99;
     margin: 0;
     border-radius: 0;
     background-color: rgba(255,255,255,0.3);
+    position: sticky;
+    position: -webkit-sticky;
 }
 
 div {
